--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 h1 {
-    margin: 50px auto;
+    margin: 50px auto 20px auto;
     font-family: 'Syne', sans-serif;
     font-weight: 800;
     font-size: 2.5rem;
@@ -15,7 +15,42 @@ h1 {
     text-align: center;
 }
 
-section {
+#counters {
+    width: max-content;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 20px;
+    margin: 0 auto;
+    text-align: center;
+}
+
+h4 {
+    font-family: 'Syne', sans-serif;
+    font-weight: 400;
+}
+
+h2 {
+    font-family: 'Syne', sans-serif;
+    font-weight: 600;
+    padding: 5px;
+}
+
+#p1-wins h2 {
+    background-color: #1a3a73;
+    color: rgb(238, 233, 229);
+}
+
+#p2-wins h2 {
+    background-color: #e5bf5a;
+    color: #955c36;
+}
+
+#ties h2 {
+    background-color: #267e65;
+    color: rgb(238, 233, 229);
+}
+
+#boxes {
     width: max-content;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -24,7 +59,7 @@ section {
     margin: 0 auto;
 } 
 
-article {
+#boxes article {
     background-color: rgb(247, 246, 245);
     border: 1px dashed #955c36;
     height: 100px;
@@ -36,10 +71,11 @@ article {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr;
     /* border: 1px dashed black; */
-    margin: 20px auto;
+    margin: 20px auto 20px auto;
     font-family: 'Syne', sans-serif;
     font-weight: 400;
     font-size: 2rem;
+    text-align: center;
 }
 
 .player1 {
@@ -50,4 +86,11 @@ article {
 .player2 {
     background-image: url("2.png");
     background-size: cover;
+}
+
+#buttonsContainer {
+    grid-template-columns: 2fr;
+    grid-template-rows: 1fr;
+    gap: 10px;
+    align-content: center;
 }
