read me updated

--- a/style.css
+++ b/style.css
@@ -89,8 +89,27 @@ h2 {
 }
 
 #buttonsContainer {
-    grid-template-columns: 2fr;
-    grid-template-rows: 1fr;
-    gap: 10px;
-    align-content: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+    width: max-content;
+    margin: 0 auto;
+    /* align-content: center; */
+}
+
+button {
+    font-family: 'Syne', sans-serif;
+    font-weight: 500;
+    font-size: 1rem;
+    border: 0;
+    padding: 10px 10px;
+}
+
+#newGameBtn {
+    color:rgb(238, 233, 229);
+    background-color: #528878;
+}
+
+#startOverBtn {
+    background-color: #c7a994;
 }
