--- a/style.css
+++ b/style.css
@@ -70,11 +70,13 @@ h2 {
 #announcement {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr;
-    /* border: 1px dashed black; */
+    height: 40px;
+    border-bottom: 1px dashed #955c36;
+    width: 200px;
     margin: 20px auto 20px auto;
     font-family: 'Syne', sans-serif;
-    font-weight: 400;
-    font-size: 2rem;
+    font-weight: 700;
+    font-size: 1.5rem;
     text-align: center;
 }
 
@@ -82,6 +84,12 @@ h2 {
     background-image: url("1.png");
     background-size: cover;
 }
+
+/* .player1Win {
+    background-image: url("1.png");
+    background-size: cover;
+    background-color: #1a3a73;
+} */
 
 .player2 {
     background-image: url("2.png");
@@ -103,6 +111,7 @@ button {
     font-size: 1rem;
     border: 0;
     padding: 10px 10px;
+    /* border-radius: 10px; */
 }
 
 #newGameBtn {
